--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,18 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-plugins {
-    id 'com.android.application' version '7.3.1' apply false
-    id 'com.android.library' version '7.3.1' apply false
+buildscript {
+    repositories {
+        google()
+        mavenCentral()
+    }
+    dependencies {
+        //gradle signingReport
+        classpath 'com.android.tools.build:gradle:7.3.1'
+    //    classpath 'com.google.gms:google-services:4.3.15'
+        def nav_version = "2.4.1"
+      //  classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
+      //  classpath 'com.google.firebase:firebase-crashlytics-gradle:2.9.8'
+    }
+}
+tasks.register('clean', Delete) {
+    delete rootProject.buildDir
 }
